# hidden-regime

./: .coveragerc  .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DOCKER_README.md  HMM_TRAINING_ROADMAP.md  LOCAL_API_SETUP_SUMMARY.md  QC_FILE_REFACTOR.md  README.md  START_HERE.md  STRATEGY_TESTING_ROADMAP.md  V2.0_RELEASE_READY.md  debug_regime_mapping.py  pyproject.toml  pytest.ini  setup.py  test_data_ingestion_simple.py  test_debug.py  test_pipeline.py  test_regime_validation.py  test_simulation_integration.py  test_simulation_validation.py  validate_stability_metrics.py
.github/workflows/: ci.yml  performance.yml  publish.yml
docker/: Dockerfile  Dockerfile.pypi  README.md  docker-compose.yml
docs/: LOCAL_BACKTEST_GUIDE.md
docs/advanced/: community-examples.md  optimization.md
docs/archive/: README.md  state_standardization.md
docs/experimental/: API_REFERENCE.md  BEST_PRACTICES_AND_FAQ.md  QC_ROADMAP.md  QUANTCONNECT_INSTALLATION.md  QUANTCONNECT_PHASE1_COMPLETE.md  QUANTCONNECT_PHASE2_COMPLETE.md  QUANTCONNECT_PHASE3_COMPLETE.md  QUANTCONNECT_PHASE4_COMPLETE.md  QUANTCONNECT_PHASE5_COMPLETE.md  QUANTCONNECT_PHASE6_COMPLETE.md  QUANTCONNECT_PHASE7_COMPLETE.md  README.md  alpha-strategy-notes.md
docs/guides/: MULTIVARIATE_HMM_GUIDE.md  SETUP_LINUX.md  SETUP_MACOS.md  SETUP_WINDOWS.md  configuration.md  quantconnect_migration.md  quickstart.md
docs/reference/: MIGRATION_2.0.md  MULTIVARIATE_CONFIG_REFERENCE.md  error-handling.md
examples/: 00_basic_regime_detection.py  01_Why_Log_Returns_Mathematical_Foundation.ipynb  01_market_report_generation.py  01_real_market_analysis.py  02_HMM_Basics_Understanding_Regime_Detection.ipynb  02_historical_event_analysis.py  02_regime_comparison_analysis.py  03_Full_Pipeline_Advanced_Analysis.ipynb  03_hmm_vs_indicators_comparison.py  03_trading_strategy_demo.py  04_Advanced_Trading_Applications.ipynb  04_multi_stock_comparative_study.py  05_advanced_analysis_showcase.py  05_regime_change_screener.py  06_sector_momentum_screening.py  07_volatility_regime_screener.py  08_custom_screening_strategies.py  09_advanced_regime_visualization.py  10_advanced_analysis_showcase.py  10_regime_transition_analysis.py  11_blog_automation_workflow.py  12_production_deployment_workflow.py  HMM101.ipynb  PipelineCheckout.ipynb  README.md  basic_hmm_demo.py  case_study.py  case_study_basic.py  case_study_comprehensive.py  case_study_multi_asset.py  comprehensive_visualization_demo.py  custom_validation_example.py  data_pipeline_demo.py  data_quality_monitoring.py  financial_case_study.py  hmm_trading_strategy.py  improved_features.py  local_backtest_with_qc_api.py  portfolio_analysis_example.py  quick_visualization_demo.py  (+5 more)
examples/advanced/: 01_quickstart_basic_usage.py  02_crisis_detection_covid_2020.py  03_feature_selection_comparison.py  04_multi_timeframe_alignment.py  05_edge_case_handling.py  06_adaptive_retraining_workflow.py  07_smoke_test_adaptive_retraining.py  EXAMPLES_QUICK_START.md  MULTIVARIATE_EXAMPLES_GUIDE.md  README_MULTIVARIATE_EXAMPLES.md  initialization_methods_demo.py  multi_timeframe_example.py  multivariate_hmm_deep_dive.ipynb  multivariate_hmm_validation.ipynb  multivariate_regime_detection_v3.py  regime_quality_validation.py  strategy_composition_and_ab_testing.py  test_examples_runnable.py  test_multivariate_e2e_examples_scenarios.py
examples/case_studies/: analyze_timeframe_persistence.py  case_study_2008_financial_crisis.py  case_study_dotcom_2000.py  market_event_study_tsla_2024.py
examples/notebooks/: 01_Why_Log_Returns_Mathematical_Foundation.ipynb  02_HMM_Basics_Understanding_Regime_Detection.ipynb  05_multi_timeframe_regime_detection.ipynb  HMM101.ipynb
examples/portfolios/: all_weather_regime_portfolio.py  momentum_regime_rotation.py  quantconnect_simple_regime_following.py  volatility_targeting_regime.py
examples/quickstart/: 00_recommended_usage.py  01_real_market_analysis.py  02_regime_comparison_analysis.py  minimal_10_lines.py  test_deterioration_strategy.py  test_deterioration_walkforward.py  test_regime_following.py  validate_spy_regimes.py
examples/retail_use_cases/: aapl_covid_case_study.py  comparative_analysis.py  doge_explosive_growth_case_study.py  performance_analysis.py  quick_reference_guide.md  retail_case_studies_summary.md  retail_trader_guide.md  retail_trading_framework.py
hidden_regime/: __init__.py  _version.py  analysis.py
hidden_regime/analysis/: __init__.py  case_study.py  financial.py  indicator_comparison.py  market_event_study.py  performance.py  regime_evolution.py  regime_quality.py  signal_attribution.py  stability.py  technical_indicators.py
hidden_regime/config/: __init__.py  analysis.py  base.py  case_study.py  data.py  interpreter.py  model.py  observation.py  pipeline.py  report.py  settings.py  signal_generation.py  simulation.py  strategy.py
hidden_regime_mcp/: benchmark_cache.py  cache.py  errors.py  prompts.py  retry.py  server.py  tools.py  verify_installation.py
notebooks/: 01_regime_exploration.ipynb  DataPipeline.ipynb  ExampleHMM.ipynb  MarketExample.ipynb  OnlineHMM_Streaming_Demo.ipynb  StateStandarization.ipynb
quantconnect_templates/: CLOUD_DEPLOYMENT.md  PARAMETERS.md  README.md  TEMPLATES_GUIDE.md  advanced_crisis_hedging.py  basic_regime_switching.py  crisis_detection.py  dynamic_position_sizing.py  framework_example.py  market_cycle_detection_bubble_fading.py  market_cycle_detection_momentum_riding.py  multi_asset_rotation.py  optimized_multi_asset.py  regime_deterioration_short.py  sector_rotation.py
scripts/: analyze_debug_csv.py  backtest_docker.sh  build_check.sh  build_docker.sh  generate_strategy.py  qc_deploy.sh  quick_backtest.sh  release.sh  setup_quantconnect.sh
tests/: TEST_PATTERNS.md  __init__.py  test_config.py  test_flexible_regime_classification.py  test_improvements_validation.py  test_integration.py  test_new_architecture.py  test_performance.py
(+228 files in other folders)
